--- a/chumash_embedding_model.ipynb
+++ b/chumash_embedding_model.ipynb
@@ -6,9 +6,7 @@
    "source": [
     "# Mishnah-Powered AI Chatbot with Gemini on Kaggle\n",
     "\n",
-    "This notebook creates a Retrieval-Augmented Generation (RAG) chatbot that answers questions using the entire Mishnah (all six orders). It is an adaptation of the Torah Chatbot, modified to use a different corpus of text from the Sefaria API.\n",
-    "\n",
-    "It uses Google's Gemini models via the latest LlamaIndex `google-genai` integration and runs seamlessly in a Kaggle environment."
+    "Following the model of the Torah-powered chatbot, this notebook creates a Retrieval-Augmented Generation (RAG) system that answers questions using the text of the Mishnah. It fetches all 63 tractates from the Sefaria API, indexes them using Google's Gemini models, and provides a user-friendly chat interface with Gradio."
    ]
   },
   {
@@ -17,7 +15,7 @@
    "source": [
     "## 1. Install Dependencies\n",
     "\n",
-    "We install the necessary libraries, including the latest LlamaIndex packages for Google's Generative AI."
+    "We will install the latest LlamaIndex packages for Google GenAI integration, along with Gradio for the UI and other utility libraries."
    ]
   },
   {
@@ -33,12 +31,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Set Up Google API Key using Kaggle Secrets\n",
+    "## 2. Set Up Google API Key\n",
     "\n",
-    "**Instructions:**\n",
-    "1. In the notebook editor, go to **Add-ons > Secrets**.\n",
-    "2. Add a new secret with the name `GOOGLE_API_KEY`.\n",
-    "3. Paste your API key from [Google AI Studio](https://aistudio.google.com/) as the value."
+    "We securely access your Google API Key from Kaggle Secrets. Ensure you have saved your key with the name `GOOGLE_API_KEY` in the **Add-ons > Secrets** menu."
    ]
   },
   {
@@ -55,7 +50,7 @@
     "    os.environ[\"GOOGLE_API_KEY\"] = user_secrets.get_secret(\"GOOGLE_API_KEY\")\n",
     "    print(\"API Key loaded successfully from Kaggle Secrets.\")\n",
     "except Exception as e:\n",
-    "    print(f\"Error loading API key: {e}. Please ensure you have set the GOOGLE_API_KEY secret correctly.\")"
+    "    print(f\"Error loading API key: {e}. Please ensure you have set the GOOGLE_API_KEY secret.\")"
    ]
   },
   {
@@ -64,7 +59,7 @@
    "source": [
     "## 3. Download the Mishnah from Sefaria\n",
     "\n",
-    "We define a `MishnahFetcher` class to get a list of all Mishnah tractates and then download the English text for each one."
+    "This section defines a `MishnahFetcher` class to download the text of all 63 tractates of the Mishnah. The Sefaria API uses a `Mishnah_{Tractate}` format for its endpoints."
    ]
   },
   {
@@ -75,62 +70,55 @@
    "source": [
     "import requests\n",
     "import pandas as pd\n",
-    "import time\n",
     "\n",
     "class MishnahFetcher:\n",
     "    def __init__(self):\n",
-    "        self.base_url = \"https://www.sefaria.org/api\"\n",
-    "        self.mishnah_tractates = self._get_mishnah_tractates()\n",
+    "        # A list of all 63 tractates of the Mishnah\n",
+    "        self.mishnah_tractates = [\n",
+    "            'Berakhot', 'Peah', 'Demai', 'Kilayim', 'Sheviit', 'Terumot', 'Maasrot', 'Maaser Sheni', 'Challah', 'Orlah', 'Bikkurim',\n",
+    "            'Shabbat', 'Eruvin', 'Pesachim', 'Shekalim', 'Yoma', 'Sukkah', 'Beitzah', 'Rosh Hashanah', 'Taanit', 'Megillah', 'Moed Katan', 'Chagigah',\n",
+    "            'Yevamot', 'Ketubot', 'Nedarim', 'Nazir', 'Sotah', 'Gittin', 'Kiddushin',\n",
+    "            'Bava Kamma', 'Bava Metzia', 'Bava Batra', 'Sanhedrin', 'Makkot', 'Shevuot', 'Eduyot', 'Avodah Zarah', 'Avot', 'Horayot',\n",
+    "            'Zevachim', 'Menachot', 'Chullin', 'Bekhorot', 'Arakhin', 'Temurah', 'Keritot', 'Meilah', 'Tamid', 'Middot', 'Kinnim',\n",
+    "            'Kelim', 'Oholot', 'Negaim', 'Parah', 'Tohorot', 'Mikvaot', 'Niddah', 'Makhshirin', 'Zavim', 'Tevul Yom', 'Yadayim', 'Oktzin'\n",
+    "        ]\n",
     "\n",
-    "    def _get_mishnah_tractates(self):\n",
-    "        """Fetches the list of all tractates in the Mishnah from the Sefaria API."""\n",
-    "        print(\"Fetching list of Mishnah tractates...\")\n",
+    "    def get_mishnah_tractate_text(self, tractate_name):\n",
+    "        # The API endpoint format is, e.g., 'Mishnah_Berakhot'\n",
+    "        api_tractate_name = f\"Mishnah_{tractate_name}\"\n",
+    "        url = f'https://www.sefaria.org/api/texts/{api_tractate_name}'\n",
+    "        print(f\"Fetching {tractate_name}...\")\n",
     "        try:\n",
-    "            index_res = requests.get(f\"{self.base_url}/index\")\n",
-    "            index_res.raise_for_status()\n",
-    "            index_data = index_res.json()\n",
-    "            for category in index_data:\n",
-    "                if category.get('category') == 'Mishnah':\n",
-    "                    tractate_titles = [content['title'] for content in category['contents']]\n",
-    "                    print(f\"Found {len(tractate_titles)} tractates.\")\n",
-    "                    return tractate_titles\n",
-    "            return []\n",
-    "        except requests.exceptions.RequestException as e:\n",
-    "            print(f\"Error fetching index: {e}\")\n",
-    "            return []\n",
-    "\n",
-    "    def get_mishnah_text(self, tractate_title, lang='en'):\n",
-    "        """Fetches the full English text for a single Mishnah tractate."""\n",
-    "        # Sefaria API uses underscores for spaces in titles, e.g., 'Mishnah_Berakhot'\n",
-    "        api_title = f\"Mishnah {tractate_title}\".replace(\" \", \"_\")\n",
-    "        url = f'{self.base_url}/texts/{api_title}'\n",
-    "        try:\n",
-    "            response = requests.get(url, params={'context': 0, 'commentary': 0, 'pad': 0, 'lang': lang})\n",
+    "            response = requests.get(url, params={'context': 0, 'commentary': 0, 'pad': 0, 'lang': 'en'})\n",
     "            response.raise_for_status()\n",
     "            data = response.json()\n",
     "            return data.get('text', [])\n",
     "        except requests.exceptions.RequestException as e:\n",
-    "            print(f\"Could not fetch {tractate_title}: {e}\")\n",
+    "            print(f\"Could not fetch {tractate_name}: {e}\")\n",
     "            return []\n",
     "\n",
-    "# --- Main Data Fetching and Processing ---\n",
+    "    def get_all_mishnah_texts(self):\n",
+    "        all_texts = {}\n",
+    "        for tractate in self.mishnah_tractates:\n",
+    "            all_texts[tractate] = self.get_mishnah_tractate_text(tractate)\n",
+    "        return all_texts\n",
+    "\n",
+    "# Fetch and process the text into a DataFrame\n",
     "fetcher = MishnahFetcher()\n",
-    "all_texts = {}\n",
-    "for tractate in fetcher.mishnah_tractates:\n",
-    "    print(f\"Downloading {tractate}...\")\n",
-    "    all_texts[tractate] = fetcher.get_mishnah_text(tractate, lang='en')\n",
-    "    time.sleep(1) # Be polite to the API\n",
+    "texts = fetcher.get_all_mishnah_texts()\n",
     "\n",
     "rows = []\n",
-    "for tractate, chapters in all_texts.items():\n",
-    "    if not chapters:\n",
+    "for tractate, chapters in texts.items():\n",
+    "    if not chapters or not isinstance(chapters, list):\n",
+    "        print(f\"Skipping {tractate} due to unexpected data format.\")\n",
     "        continue\n",
     "    for chapter_idx, chapter in enumerate(chapters, 1):\n",
-    "        for mishnah_idx, mishnah_text in enumerate(chapter, 1):\n",
-    "            rows.append((tractate, chapter_idx, mishnah_idx, mishnah_text))\n",
+    "        for mishnah_idx, mishnah in enumerate(chapter, 1):\n",
+    "            rows.append((tractate, chapter_idx, mishnah_idx, mishnah))\n",
     "\n",
     "df_mishnah = pd.DataFrame(rows, columns=['tractate', 'chapter', 'mishnah', 'text'])\n",
-    "df_mishnah['text'] = df_mishnah['text'].str.split('<').str[0].str.strip()\n",
+    "# Clean up HTML tags and remove empty rows\n",
+    "df_mishnah['text'] = df_mishnah['text'].astype(str).str.split(\"<\").str[0]\n",
     "df_mishnah.dropna(inplace=True)\n",
     "\n",
     "print(\"\\nMishnah text successfully downloaded and processed.\")\n",
@@ -143,7 +131,7 @@
    "source": [
     "## 4. Define Google GenAI LLM and Embedding Models\n",
     "\n",
-    "We instantiate the models using the correct classes from the `google-genai` packages."
+    "We initialize the models from the `google-genai` packages, which provide the latest integration with Google's services."
    ]
   },
   {
@@ -161,7 +149,6 @@
     "    model_name=\"models/gemini-pro\",\n",
     "    temperature=0,\n",
     ")\n",
-    "\n",
     "print(\"Successfully initialized Google GenAI LLM and Embedding models.\")"
    ]
   },
@@ -171,7 +158,7 @@
    "source": [
     "## 5. Configure LlamaIndex and Prepare Documents\n",
     "\n",
-    "We group the Mishnayot into chapter-level `Document` objects and configure the global `Settings`."
+    "We set the global LLM and embedding model for LlamaIndex. Then, we convert our DataFrame of mishnayot into a list of `Document` objects, grouping by chapter to ensure each document has sufficient context."
    ]
   },
   {
@@ -188,7 +175,7 @@
     "\n",
     "documents = []\n",
     "for (tractate, chapter), group in df_mishnah.groupby(['tractate', 'chapter']):\n",
-    "    # Combine all mishnayot in a chapter into a single text block\n",
+    "    # Combine all mishnayot in a chapter into a single text block for better context\n",
     "    chapter_text = \"\\n\".join(f\"Mishnah {r['mishnah']}: {r['text']}\" for _, r in group.iterrows())\n",
     "    \n",
     "    metadata = {\n",
@@ -206,7 +193,7 @@
    "source": [
     "## 6. Build the Vector Store Index\n",
     "\n",
-    "Now we create the `VectorStoreIndex`. This process creates embeddings for each chapter and stores them in a vector database for efficient retrieval."
+    "The `VectorStoreIndex` is the core of our RAG system. It takes our documents, creates vector embeddings for them, and stores them in a way that allows for fast and accurate semantic retrieval."
    ]
   },
   {
@@ -226,7 +213,7 @@
    "source": [
     "## 7. Set Up the Chat Engine\n",
     "\n",
-    "We use the `ContextChatEngine`, which is ideal for RAG as it directly supports a system prompt to guide the chatbot's behavior."
+    "We use the `ContextChatEngine`, which is ideal for RAG applications. It retrieves relevant text based on the user's query and uses it, along with a system prompt and conversation history, to formulate a grounded answer."
    ]
   },
   {
@@ -238,23 +225,26 @@
     "from llama_index.core.memory import ChatMemoryBuffer\n",
     "from llama_index.core.chat_engine import ContextChatEngine\n",
     "\n",
-    "# Update the system prompt for the Mishnah\n",
+    "# Define a system prompt for a Mishnah scholar\n",
     "system_prompt = (\n",
-    "    \"You are a Talmudic scholar assistant. Your role is to answer questions strictly based on the provided Mishnah texts. \"\n",
-    "    \"Cite the tractate, chapter, and mishnah number for your answer. \"\n",
-    "    \"If the answer cannot be found in the provided texts, you must respond with: 'I cannot find a Mishnah to answer that.'\"\n",
+    "    \"You are a Mishnah scholar assistant. Your role is to answer questions strictly based on the provided text from the Mishnah. \"\n",
+    "    \"Cite the tractate, chapter, and mishnah number for your answer. The context provided will be a full chapter; you must identify the specific mishnah within it. \"\n",
+    "    \"If the answer cannot be found in the provided text, you must respond with: 'I cannot find a teaching in the Mishnah to answer that.'\"\n",
     ")\n",
     "\n",
+    "# Create a retriever to search the index\n",
     "retriever = index.as_retriever(similarity_top_k=10)\n",
+    "\n",
     "chat_memory = ChatMemoryBuffer.from_defaults(token_limit=8000)\n",
     "\n",
+    "# Create the chat engine\n",
     "chat_engine = ContextChatEngine.from_defaults(\n",
     "    retriever=retriever,\n",
     "    memory=chat_memory,\n",
     "    system_prompt=system_prompt\n",
     ")\n",
     "\n",
-    "print(\"Successfully created ContextChatEngine for Mishnah.\")"
+    "print(\"Successfully created Mishnah ContextChatEngine.\")"
    ]
   },
   {
@@ -263,7 +253,7 @@
    "source": [
     "## 8. Launch the Gradio Web Interface\n",
     "\n",
-    "Finally, we launch the Gradio `ChatInterface` with a new title, description, and examples relevant to the Mishnah."
+    "Finally, we launch the Gradio `ChatInterface`. This creates a shareable public URL where anyone can interact with your Mishnah chatbot."
    ]
   },
   {
@@ -281,8 +271,12 @@
     "gr.ChatInterface(\n",
     "    chat_interface, \n",
     "    title=\"📖 Ask the Mishnah (with Gemini)\",\n",
-    "    description=\"This chatbot answers questions using the entire Mishnah, powered by Google's Gemini.\",\n",
-    "    examples=[\"From when may one recite the Shema in the evening?\", \"What are the four primary categories of damages?\", \"Who has no portion in the world to come?\"]\n",
+    "    description=\"This chatbot answers questions using the 63 tractates of the Mishnah, powered by Google Gemini.\",\n",
+    "    examples=[\n",
+    "        \"From when may one recite the Shema in the evening?\",\n",
+    "        \"What are the four principal categories of damages?\",\n",
+    "        \"Who is wealthy?\"\n",
+    "    ]\n",
     ").launch(share=True)"
    ]
   }
